forkless PoC: Issue 29 Rework S2 -- sink 10 catalog helpers to polaris-core
Moves 10 of ~15 runtime/service-only types LocalIcebergCatalog/PolarisIcebergCatalog import,
so the S3 extensions/ module move won't hit them as new blockers. Classified per type:

- utility -> core: ExceptionUtils, CatalogUtils, LocationUtils, FileIOUtil,
  IcebergPropertiesValidation, StorageTypeFileIO (dependency of the validation file),
  IcebergHttpUtil
- substrate-SPI -> core (spi.substrate/spi.feature.catalog, mirroring the existing
  EntityResolver/PolarisAuthorizer/StorageIoProvider pattern): SupportsNotifications,
  PolarisEventDispatcher, PolarisMetricsReporter

Two Java-21 SequencedCollection calls (List#getFirst, List#reversed) broke under
polaris-core's Java-17 release target (the "polaris-client" convention plugin, vs
runtime/service's "polaris-runtime" at Java 21) -- rewritten to get(0) and Guava's
Lists.reverse.

5 types deliberately left in place, real S3 blockers, not forced:
- CatalogAuthorizer, EventAttributes: moving either into polaris-core would create a real
  module cycle through :polaris-api-catalog-service (both import OpenAPI model types --
  PolicyIdentifier / policy-and-generic-table request/response types -- owned by that
  module, which already depends on polaris-core)
- StorageAccessConfigProvider, PolarisEventMetadataFactory: concrete Quarkus CDI beans
  (@RequestScoped / @ApplicationScoped) wired to RESTEasy Reactive + Security internals,
  not pure interfaces -- need an interface-extraction pass (same shape as
  StorageIoProvider/DefaultStorageIoProvider) before they can be split core-interface vs
  runtime-impl
- ReservedProperties: already an interface, but carries a SmallRye @ConfigMapping
  annotation -- moving it as-is would pull io.smallrye.config into a plain domain module

OSS full multi-module test: 25011/0/0/66, identical to baseline, zero regression.